autoresearch: reorganize into a reusable harness (archive run + meta layer)
Turn autoresearch/ into a reusable, multi-round harness instead of a single run's
scratch space.

- Archive the completed round (git mv, history preserved):
  autoresearch/{KICKOFF,LOG,REPORT}.md + results/ ->
  autoresearch/archive/2026-06-05_tess2-3-throughput/.
- New meta layer at autoresearch/ top level:
  - README.md      — directory conventions + round lifecycle + hard rules.
  - META.md        — durable cross-round lessons: permanently-closed leads (with
                     reasons), meta-lessons (counting!=wall-clock, Vector-API deopt,
                     phase-share dilution), machine/tooling gotchas (load gating,
                     perf blocked, -prof gc, scorecard stdout), reusable
                     instrumentation catalog, and the archive index. READ FIRST.
  - KICKOFF.md     — idle dispatcher: states no active round, points to META +
                     archive, lists out-of-scope directions, and how to arm a round
                     (so /loop doesn't re-run a concluded mission / manufacture churn).
  - templates/KICKOFF.template.md — reusable mission skeleton (mission/scope/rules/
                     state/leads/per-phase workflow/stop conditions).
- Migrate stale autoresearch/{LOG.md,results/} path references in
  docs/performance-lessons.md and docs/optimization-backlog.md to the archive path.

(Auto-memory pointers updated separately to point at META.md + the archive.)